--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "katex": "^0.16.22",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-simple-typewriter": "^5.0.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
